--- a/main.css
+++ b/main.css
@@ -1,6 +1,26 @@
-/** {
+[class*="zocial-"]:before {
+  color: gray;
+  display: inline-block;
+  font-family: 'zocial', sans-serif;
+  text-shadow: 3px 3px 3px #aaa;
+  width: 2em;
+}
+
+a:hover [class*="zocial-"]:before {
+  color: #2a5d8a;
+}
+
+div#social a {
+  margin: 0 1em 0 0;
+}
+
+div#social a:last-of-type {
+  margin: 0;
+}
+
+* {
    outline: 1px solid red;
-} */
+}
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -73,7 +93,6 @@ margin: 0;
 h4 {
     font-size: 10px;
 }
-
 }
 @media screen and (max-width:250px) {
     .col-md-2 {
@@ -90,23 +109,15 @@ h4 {
     font-size: 5px;
     font-weight: bold;
 }
-.svg-icon {
-    width: 10vw;
-    height: 10vh;
-    float:left;
-}
+
 .text-center {
     {display:block;
     margin-right:auto;
     margin-left:auto;
 }
 
-/*.three-images {
-    margin: 1em;
-    display: flex;
-    flex-wrap:wrap;
-    */
-}
-.col-md-4 {
-    margin: 1em;
+.footer {
+    background:gray;
+    margin:1em;
+    padding:10px;
 }
